@@ -15,6 +15,7 @@ Changes:
 - Create a dataset by using the configuration of an existing dataset.
 - Enabled: import of volume block size.
 - Add primarycache and secondarycache configuration option for zfs volume.
+- Add SHA-512 and Skein option for ZFS volume deduplication.
 - Upgrade msmtp to 1.6.6.
 - Upgrade arcconf to v2_02_22404.
 - Upgrade novnc to 0.6.2.
